@@ -1,9 +1,14 @@
-// Java 8+
+// Java 25+
+// Feature shown: ConcurrentHashMap and BlockingQueue for thread-safe collections, final in Java 8+
+
 /**
  * Listing 10.13 — ConcurrentCollections.java
- * Demonstrates: ConcurrentHashMap atomic operations and BlockingQueue producer-consumer coordination
+ * Demonstrates: ConcurrentHashMap for concurrent reads/writes and
+ * LinkedBlockingQueue for producer-consumer coordination without
+ * explicit synchronisation.
  * Chapter 10: Concurrency Foundations and Coordination
- * Requires: Java 8+
+ * Requires: Java 25+ (compiled with --enable-preview --release 21 for
+ * the void main() instance main method)
  */
 package chapter10;
 
@@ -20,14 +25,14 @@ public class ConcurrentCollections {
     private static final Logger log =
             Logger.getLogger(ConcurrentCollections.class.getName());
 
-    public static void main(String[] args) throws InterruptedException {
+    void main() throws InterruptedException {
 
-        // ConcurrentHashMap — concurrent reads and writes
-        // Segments the map internally to reduce contention
+        // ConcurrentHashMap — segments the map internally to reduce contention
+        // Multiple threads can write to different segments simultaneously
         ConcurrentHashMap<String, Integer> orderCounts =
                 new ConcurrentHashMap<>();
 
-        // merge, compute — all atomic operations
+        // merge() is atomic — safe to call from multiple threads
         orderCounts.merge("PLACED", 1, Integer::sum);
         orderCounts.merge("PLACED", 1, Integer::sum);
         orderCounts.merge("SHIPPED", 1, Integer::sum);
@@ -35,7 +40,7 @@ public class ConcurrentCollections {
         log.info("Placed: " + orderCounts.get("PLACED"));   // 2
         log.info("Shipped: " + orderCounts.get("SHIPPED")); // 1
 
-        // BlockingQueue — producer-consumer coordination
+        // LinkedBlockingQueue — bounded producer-consumer queue
         // put() blocks when full, take() blocks when empty
         BlockingQueue<String> eventQueue =
                 new LinkedBlockingQueue<>(100);
@@ -47,7 +52,7 @@ public class ConcurrentCollections {
         producer.submit(() -> {
             try {
                 for (int i = 0; i < 5; i++) {
-                    eventQueue.put("event-" + i); // blocks if queue full
+                    eventQueue.put("event-" + i);
                     log.info("Produced: event-" + i);
                 }
             } catch (InterruptedException e) {
@@ -59,7 +64,7 @@ public class ConcurrentCollections {
         consumer.submit(() -> {
             try {
                 for (int i = 0; i < 5; i++) {
-                    String event = eventQueue.take(); // blocks if queue empty
+                    String event = eventQueue.take(); // blocks until item available
                     log.info("Consumed: " + event);
                 }
             } catch (InterruptedException e) {
@@ -75,7 +80,10 @@ public class ConcurrentCollections {
         // Output:
         // INFO: Placed: 2
         // INFO: Shipped: 1
-        // INFO: Produced: event-0 ... event-4
-        // INFO: Consumed: event-0 ... event-4
+        // INFO: Produced: event-0
+        // INFO: Consumed: event-0
+        // INFO: Produced: event-1
+        // INFO: Consumed: event-1
+        // ... (order of produced/consumed lines may vary)
     }
 }
